--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   intl: ^0.17.0
   image_picker: ^1.0.1
   path_provider: ^2.0.15
+  gallery_saver: ^2.3.2
 
 
   # The following adds the Cupertino Icons font to your application.
