--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   encrypt: ^5.0.3
   shared_preferences: ^2.0.0
   gallery_saver: ^2.3.2
-  excel: 2.1.0
+  excel: ^2.1.0
   fluttertoast: ^8.2.2
   syncfusion_flutter_xlsio: ^22.2.7
   image_cropper: ^4.0.1
