--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   camera: ^0.10.5+2
+  google_fonts: ^4.0.4
 
 dev_dependencies:
   flutter_test:
@@ -76,7 +77,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/wipro_logo.png
+    - assets/images/wipro_logo.png
+    - assets/images/wipro_black_logo.png
     # - lib/.env
   #   - images/a_dot_ham.jpeg
 
